--- a/src/index.scss
+++ b/src/index.scss
@@ -3,10 +3,8 @@
   line-height: 1.5;
   font-weight: 400;
 
-  // color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
   background-color: #242424;
-  
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -19,7 +17,8 @@
   box-sizing: border-box;
 }
 
-body, #root {
+body,
+#root {
   margin: 0;
   padding: 0;
   display: flex;
